--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "demo-serverless-func",
+  "name": "marvel-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@salutejs/recognizer-smartapp-brain": "^0.17.6",
     "@salutejs/recognizer-string-similarity": "^0.15.0",
-    "@salutejs/scenario": "^0.15.0",
-    "@sberdevices/assistant-client": "^4.3.0",
-    "@sberdevices/plasma-icons": "^1.38.0",
+    "@salutejs/scenario": "^0.17.6",
+    "@salutejs/storage-adapter-memory": "^0.17.6",
+    "@sberdevices/assistant-client": "^4.3.1",
+    "@sberdevices/plasma-icons": "^1.39.3",
     "@sberdevices/plasma-temple": "^0.49.0",
-    "@sberdevices/plasma-ui": "^1.44.0",
+    "@sberdevices/plasma-tokens": "^1.12.1",
+    "@sberdevices/plasma-ui": "^1.46.3",
     "@sberdevices/spatial-navigation": "^1.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -17,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.3.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -45,11 +49,13 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.2",
-    "@types/react": "^17.0.19",
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.13",
+    "@types/styled-components": "^5.1.14",
+    "@types/uuid": "^8.3.1",
     "@vercel/node": "^1.12.1",
-    "typescript": "^4.3.5"
+    "prettier": "^2.4.0",
+    "typescript": "^4.4.2"
   }
 }
