--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@salutejs/storage-adapter-memory": "^0.17.6",
     "@sberdevices/assistant-client": "^4.3.1",
     "@sberdevices/plasma-icons": "^1.39.3",
-    "@sberdevices/plasma-temple": "^0.49.0",
+    "@sberdevices/plasma-temple": "^0.52.0",
     "@sberdevices/plasma-tokens": "^1.12.1",
     "@sberdevices/plasma-ui": "^1.46.3",
     "@sberdevices/spatial-navigation": "^1.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
@@ -35,6 +36,11 @@
       "react-app/jest"
     ]
   },
+  "files": [
+    "./src/*",
+    "./scenario/*",
+    "./api/*"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -49,6 +55,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/md5": "^2.3.1",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
