--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "assert": "^2.0.0",
+    "debug": "^4.3.4",
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/assert": "^1.5.6",
+    "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.2",
     "@types/md5": "^2.3.1",
     "@types/node": "^16.11.6",
