--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@salutejs/recognizer-smartapp-brain": "^0.17.6",
-    "@salutejs/recognizer-string-similarity": "^0.15.0",
-    "@salutejs/scenario": "^0.17.6",
-    "@salutejs/storage-adapter-memory": "^0.17.6",
-    "@sberdevices/assistant-client": "^4.3.1",
-    "@sberdevices/plasma-icons": "^1.39.3",
-    "@sberdevices/plasma-temple": "^0.52.0",
-    "@sberdevices/plasma-tokens": "^1.12.1",
-    "@sberdevices/plasma-ui": "^1.46.3",
-    "@sberdevices/spatial-navigation": "^1.0.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "md5": "^2.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.1",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "@salutejs/client": "1.4.3",
+    "@salutejs/plasma-icons": "1.90.2",
+    "@salutejs/plasma-temple": "1.85.0",
+    "@salutejs/plasma-tokens": "1.18.1",
+    "@salutejs/plasma-ui": "1.119.0",
+    "@salutejs/recognizer-smartapp-brain": "0.26.1",
+    "@salutejs/scenario": "0.26.1",
+    "@salutejs/spatial-navigation": "1.0.5",
+    "@salutejs/storage-adapter-memory": "0.26.1",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "md5": "2.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "5.0.1",
+    "styled-components": "5.3.5",
+    "uuid": "8.3.2",
+    "web-vitals": "1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,15 +53,15 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/md5": "^2.3.1",
-    "@types/node": "^16.9.1",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.14",
-    "@types/uuid": "^8.3.1",
-    "@vercel/node": "^1.12.1",
-    "prettier": "^2.4.0",
-    "typescript": "^4.4.2"
+    "@types/jest": "27.5.2",
+    "@types/md5": "2.3.2",
+    "@types/node": "16.11.47",
+    "@types/react": "17.0.48",
+    "@types/react-dom": "17.0.17",
+    "@types/styled-components": "5.1.25",
+    "@types/uuid": "8.3.4",
+    "@vercel/node": "1.15.4",
+    "prettier": "2.7.1",
+    "typescript": "4.7.4"
   }
 }
